# Rainfallpredsys

./: .replit  README.md  app.py  imputer.pkl  label_encoder.pkl  predict_model.py  pyproject.toml  requirements.txt  scaler.pkl  train_model.py
static/: styles.css
templates/: index.html  predict.html  result.html  visualization_result.html  visualize.html
